--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 futures = "0.3.31"
 regex = "1.11.1"
-reqwest = { version = "0.12.12", features = ["cookies", "json"] }
+reqwest = { version = "0.12.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
